# 3dViewer

src/: CMakeLists.txt  Makefile  README.html  main.cc
src/Controlers/include/: CameraController.h  MediaController.h  ObjectController.h
src/Controlers/src/: CameraController.cc  MediaController.cc  ObjectController.cc
src/Models/include/Buffers/: ElementBufferObject.h  VertexArrayObject.h  VertexBufferObject.h
src/Models/include/Camera/: Camera.h
src/Models/include/Media/: MediaSaver.h
src/Models/include/Object/: Mesh.h  Object.h
src/Models/include/Parser/: ParseObject.h
src/Models/include/Point/: FocusPoint.h
src/Models/include/Shader/: Shader.h
src/Models/include/Texture/: Texture.h
src/Models/include/Transformation/: Transformation.h
src/Models/include/Types/: s21_Fac3f.h  s21_Ver2f.h  s21_Ver3f.h
src/Models/src/Buffers/: ElementBufferObject.cc  VertexArrayObject.cc  VertexBufferObject.cc
src/Models/src/Camera/: Camera.cc
src/Models/src/Media/: MediaSaver.cc
src/Models/src/Object/: Mesh.cc  Object.cc
src/Models/src/Parser/: ParseObject.cc
src/Models/src/Point/: FocusPoint.cc
src/Models/src/Shader/: Shader.cc
src/Models/src/Texture/: Texture.cc
src/Models/src/Transformation/: Transformation.cc
src/ResourceFiles/: res.qrc
src/ResourceFiles/Shaders/: default.frag  default.vert  light.frag  light.vert
src/Settings/: ObjectSettings.h
src/Tests/: CMakeLists.txt  school21_unitTest.cc
src/Views/Ui/: camerasetting.ui  color.ui  lightingsettings.ui  mainwindow.ui  paramtransform.ui  texturesettings.ui
src/Views/include/Camera/: CameraSetting.h
src/Views/include/Color/: Color.h
src/Views/include/Draw/: DrawWidget.h
src/Views/include/Light/: LightingSettings.h
src/Views/include/MainWindow/: MainWindow.h  TempWindowFactory.h
src/Views/include/Texture/: TextureSettings.h
src/Views/include/Transformation/: ParamTransform.h
src/Views/src/Camera/: CameraSetting.cc
src/Views/src/Color/: Color.cc
src/Views/src/Draw/: DrawWidget.cc
src/Views/src/Light/: LightingSettings.cc
src/Views/src/MainWindow/: MainWindow.cc  TempWindowFactory.cc
src/Views/src/Texture/: TextureSettings.cc
src/Views/src/Transformation/: ParamTransform.cc
src/include/QtGifImage/examples/gifimage/creategif/: main.cpp
src/include/QtGifImage/examples/gifimage/extractFrames/: main.cpp
src/include/QtGifImage/src/gifimage/: qgifimage.cpp  qgifimage.h  qgifimage_p.h
src/include/QtGifImage/tests/auto/qgifimage/: tst_qgifimagetest.cpp
src/include/glm/gtc/: integer.hpp
src/include/glm/gtx/: texture.hpp  wrap.hpp
